# maniskill_myws

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: maniskill_dataset_standard.md  openpi_integration.md  pld_reproduction.md
scripts/: bc_train.py  check_env.py  check_open_safe_door2_initial_overlap.py  convert_traj_to_lerobot.py  export_camera_videos_from_h5.py  inspect_traj_h5.py  ms_demo_random_action.py  record_random.py  replay_dataset_to_new_dir.py  run_maniskill_demo.py
scripts/pi0/: finetune_maniskill.py  run_pi0_remote.py  run_pi0_remote_multi_seed.py  serve.py  train_deepspeed.py  validate_lerobot_dataset.py
scripts/pld/: collect_base_policy_dataset.py  collect_hybrid_pld.py  eval_residual_checkpoints.py  train_residual_sac.py
src/maniskill_myws/: __init__.py  task_prompts.py
src/maniskill_myws/assets/: __init__.py
src/maniskill_myws/assets/101593/: mobility.urdf
src/maniskill_myws/assets/brush/: CMakeLists.txt  mobility.urdf  package.xml
src/maniskill_myws/assets/brush/launch/: display.launch  gazebo.launch
src/maniskill_myws/assets/brush/meshes/: base_link.STL  brush_part_0.glb  brush_part_1.glb  (+3 more)
src/maniskill_myws/assets/door/: CMakeLists.txt  package.xml
src/maniskill_myws/assets/safety_hook/: mobility.urdf
src/maniskill_myws/assets/safety_hook2/: CMakeLists.txt  package.xml
src/maniskill_myws/assets/solar_panel/: mobility.urdf
src/maniskill_myws/openpi_bridge/: __init__.py  keypath.py  obs_to_openpi.py  remote_policy.py
src/maniskill_myws/pld/: __init__.py  h5_replay.py  path_visualizer.py  policies.py  replay_buffer.py  sac.py  state.py
src/maniskill_myws/tasks/: __init__.py  brush_solar_panel.py  open_safe_door.py  open_safe_door2.py  open_safety_hook.py  stack_cube_v2.py  sweep_solar_panel.py  take_safety_hook.py  turn_globe_valve.py
src/tasks/: __init__.py  turn_globe_valve.py
tests/: test_env_make.py  test_manipulation.py  test_registration.py
utils/: coacd.py
wandb/: latest-run
wandb/run-20260126_110429-64lk21r5/files/: requirements.txt  wandb-metadata.json
(+76 files in other folders)
