[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maniskill-myws"
version = "0.1.0"
description = "Custom ManiSkill tasks + imitation learning workspace (tasks, data collection, training, visualization)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "bitqjy" }]

# Keep core deps light; in local-source workflows ManiSkill/SAPIEN/PyTorch are installed separately (conda / source).
dependencies = [
  "coacd>=1.0.7",
  "numpy==1.26.4",
  "websockets>=16.0",
]

[project.optional-dependencies]
runtime = [
  "gymnasium>=0.29",
  "h5py>=3.9",
  "mani_skill",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maniskill_myws = ["assets/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "third_party",
  "tests/test_manipulation.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: lightweight environment smoke tests",
]
